# Schroeder_Reverb

./: .gitignore  CMakeLists.txt  CMakePresets.json  ReadMe.md  compile_commands.json
src/: AllpassFilter.cpp  AllpassFilter.h  AudioEffect.h  CMakeLists.txt  CombFilter.cpp  CombFilter.h  DelayLine.cpp  DelayLine.h  Reverb.cpp  Reverb.h  Schroeder_Reverb.cpp
tests/: CMakeLists.txt  test_CombFilter.cpp  test_DelayLine.cpp
tests/process/: CMakeLists.txt  CombFilterProcess.cpp  ReverbProcess.cpp
